@@ -15,7 +15,7 @@
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library.
  */
-package cz.cvut.kbss.ontodriver.rdf4j;
+package cz.cvut.kbss.ontodriver.rdf4j.list;
 
 import cz.cvut.kbss.ontodriver.descriptor.ReferencedListDescriptor;
 import cz.cvut.kbss.ontodriver.descriptor.ReferencedListDescriptorImpl;
@@ -23,6 +23,8 @@ import cz.cvut.kbss.ontodriver.descriptor.ReferencedListValueDescriptor;
 import cz.cvut.kbss.ontodriver.exception.IntegrityConstraintViolatedException;
 import cz.cvut.kbss.ontodriver.model.Assertion;
 import cz.cvut.kbss.ontodriver.model.Axiom;
+import cz.cvut.kbss.ontodriver.model.LangString;
+import cz.cvut.kbss.ontodriver.model.MultilingualString;
 import cz.cvut.kbss.ontodriver.model.NamedResource;
 import cz.cvut.kbss.ontodriver.rdf4j.connector.Connector;
 import cz.cvut.kbss.ontodriver.rdf4j.environment.Generator;
@@ -46,18 +48,18 @@ import org.mockito.quality.Strictness;
 
 import java.net.URI;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Random;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import static cz.cvut.kbss.ontodriver.rdf4j.ListHandlerTestHelper.LIST_PROPERTY;
-import static cz.cvut.kbss.ontodriver.rdf4j.ListHandlerTestHelper.NEXT_NODE_PROPERTY;
-import static cz.cvut.kbss.ontodriver.rdf4j.ListHandlerTestHelper.OWNER;
-import static cz.cvut.kbss.ontodriver.rdf4j.ListHandlerTestHelper.generateList;
+import static cz.cvut.kbss.ontodriver.rdf4j.list.ListHandlerTestHelper.LIST_PROPERTY;
+import static cz.cvut.kbss.ontodriver.rdf4j.list.ListHandlerTestHelper.NEXT_NODE_PROPERTY;
+import static cz.cvut.kbss.ontodriver.rdf4j.list.ListHandlerTestHelper.OWNER;
+import static cz.cvut.kbss.ontodriver.rdf4j.list.ListHandlerTestHelper.generateList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
@@ -69,7 +71,6 @@ import static org.mockito.Mockito.anyCollection;
 import static org.mockito.Mockito.atLeast;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.eq;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
@@ -81,15 +82,15 @@ import static org.mockito.Mockito.when;
 public class ReferencedListHandlerTest {
 
     private static final ValueFactory vf = SimpleValueFactory.getInstance();
-    private static final Resource owner = vf.createIRI(OWNER.toString());
+    static final Resource owner = vf.createIRI(OWNER.toString());
 
-    private static final IRI hasListProperty = vf.createIRI(LIST_PROPERTY);
-    private static final IRI nextNodeProperty = vf.createIRI(NEXT_NODE_PROPERTY);
-    private static final IRI nodeContentProperty = vf.createIRI(ListHandlerTestHelper.NODE_CONTENT_PROPERTY);
+    static final IRI hasListProperty = vf.createIRI(LIST_PROPERTY);
+    static final IRI nextNodeProperty = vf.createIRI(NEXT_NODE_PROPERTY);
+    static final IRI nodeContentProperty = vf.createIRI(ListHandlerTestHelper.NODE_CONTENT_PROPERTY);
 
-    private static final Assertion hasListAssertion = Assertion.createObjectPropertyAssertion(URI.create(LIST_PROPERTY), false);
-    private static final Assertion nextNodeAssertion = Assertion.createObjectPropertyAssertion(URI.create(NEXT_NODE_PROPERTY), false);
-    private static final Assertion nodeContentAssertion = Assertion.createObjectPropertyAssertion(
+    static final Assertion hasListAssertion = Assertion.createObjectPropertyAssertion(URI.create(LIST_PROPERTY), false);
+    static final Assertion nextNodeAssertion = Assertion.createObjectPropertyAssertion(URI.create(NEXT_NODE_PROPERTY), false);
+    static final Assertion nodeContentAssertion = Assertion.createObjectPropertyAssertion(
             URI.create(ListHandlerTestHelper.NODE_CONTENT_PROPERTY), false);
 
     @Mock
@@ -97,7 +98,7 @@ public class ReferencedListHandlerTest {
 
     private ReferencedListDescriptor listDescriptor;
 
-    private ReferencedListHandler handler;
+    private ReferencedListHandler sut;
 
     private final List<Statement> added = new ArrayList<>();
     private final List<Statement> removed = new ArrayList<>();
@@ -106,7 +107,7 @@ public class ReferencedListHandlerTest {
     public void setUp() throws Exception {
         this.listDescriptor = new ReferencedListDescriptorImpl(OWNER, hasListAssertion, nextNodeAssertion, nodeContentAssertion);
 
-        this.handler = new ReferencedListHandler(connector, vf);
+        this.sut = new ReferencedListHandler(connector, vf);
         doAnswer(invocation -> {
             final Collection<Statement> arg = (Collection<Statement>) invocation.getArguments()[0];
             added.addAll(arg);
@@ -124,7 +125,7 @@ public class ReferencedListHandlerTest {
         final List<NamedResource> refList = generateList();
         final List<URI> listNodes = initListNodes(refList);
         initStatementsForList(listNodes, refList);
-        final Collection<Axiom<?>> res = handler.loadList(listDescriptor);
+        final Collection<Axiom<?>> res = sut.loadList(listDescriptor);
         assertEquals(refList.size(), res.size());
         for (Axiom<?> a : res) {
             assertInstanceOf(NamedResource.class, a.getValue().getValue());
@@ -181,7 +182,7 @@ public class ReferencedListHandlerTest {
                 Collections.singleton(vf.createStatement(owner, hasListProperty, headNode)));
         when(connector.findStatements(eq(headNode), eq(nodeContentProperty), eq(null),
                 anyBoolean(), eq(Collections.emptySet()))).thenReturn(Collections.emptyList());
-        assertThrows(IntegrityConstraintViolatedException.class, () -> handler.loadList(listDescriptor));
+        assertThrows(IntegrityConstraintViolatedException.class, () -> sut.loadList(listDescriptor));
         verify(connector, never()).findStatements(any(Resource.class), eq(nextNodeProperty),
                 any(Value.class), anyBoolean());
     }
@@ -195,7 +196,7 @@ public class ReferencedListHandlerTest {
         when(
                 connector.findStatements(eq(elem), eq(nodeContentProperty), eq(null),
                         anyBoolean(), eq(Collections.emptySet()))).thenReturn(Collections.emptyList());
-        assertThrows(IntegrityConstraintViolatedException.class, () -> handler.loadList(listDescriptor));
+        assertThrows(IntegrityConstraintViolatedException.class, () -> sut.loadList(listDescriptor));
     }
 
     private Resource selectRandomNode(List<URI> nodes) {
@@ -214,10 +215,12 @@ public class ReferencedListHandlerTest {
         final List<URI> listNodes = initListNodes(refList);
         initStatementsForList(listNodes, refList);
         final Resource node = selectRandomNode(listNodes);
-        final List<Statement> stmts = Arrays.asList(mock(Statement.class), mock(Statement.class));
+        final List<Statement> stmts = List.of(
+                vf.createStatement(node, property, vf.createIRI(Generator.generateUri().toString())),
+                vf.createStatement(node, property, vf.createIRI(Generator.generateUri().toString())));
         when(connector.findStatements(eq(node), eq(property), eq(null),
                 anyBoolean(), eq(Collections.emptySet()))).thenReturn(stmts);
-        assertThrows(IntegrityConstraintViolatedException.class, () -> handler.loadList(listDescriptor));
+        assertThrows(IntegrityConstraintViolatedException.class, () -> sut.loadList(listDescriptor));
     }
 
     @Test
@@ -233,7 +236,7 @@ public class ReferencedListHandlerTest {
             valueDescriptor.addValue(val);
         }
         final ArgumentCaptor<Collection> captor = ArgumentCaptor.forClass(Collection.class);
-        handler.persistList(valueDescriptor);
+        sut.persistList(valueDescriptor);
         verify(connector).addStatements(captor.capture());
         final Collection<Statement> stmts = captor.getValue();
         assertEquals(values.size() * 2, stmts.size());
@@ -256,7 +259,7 @@ public class ReferencedListHandlerTest {
         final ReferencedListValueDescriptor<NamedResource> valueDescriptor = new ReferencedListValueDescriptor<>(OWNER, hasListAssertion, nextNodeAssertion, nodeContentAssertion);
         assertTrue(valueDescriptor.getValues().isEmpty());
         final ReferencedListValueDescriptor spiedValues = spy(valueDescriptor);
-        handler.persistList(spiedValues);
+        sut.persistList(spiedValues);
         verify(spiedValues).getValues();
         verify(connector, never()).addStatements(anyCollection());
     }
@@ -268,7 +271,7 @@ public class ReferencedListHandlerTest {
         final List<NamedResource> refList = generateList();
         final List<Statement> oldList = initStatementsForList(initListNodes(refList), refList);
 
-        handler.updateList(descriptor);
+        sut.updateList(descriptor);
         verify(connector).removeStatements(anyCollection());
         verify(connector, never()).addStatements(anyCollection());
         assertEquals(oldList.size(), removed.size());
@@ -276,15 +279,20 @@ public class ReferencedListHandlerTest {
     }
 
     private static ReferencedListValueDescriptor<NamedResource> initValues(int count) {
-        final ReferencedListValueDescriptor<NamedResource> desc = new ReferencedListValueDescriptor<>(OWNER,
-                Assertion.createObjectPropertyAssertion(URI.create(LIST_PROPERTY), false),
-                Assertion.createObjectPropertyAssertion(URI.create(NEXT_NODE_PROPERTY),
-                        false), Assertion.createObjectPropertyAssertion(
-                URI.create(ListHandlerTestHelper.NODE_CONTENT_PROPERTY), false));
+        final ReferencedListValueDescriptor<NamedResource> desc = createValueDescriptor(Assertion.AssertionType.OBJECT_PROPERTY);
         for (int i = 0; i < count; i++) {
             desc.addValue(NamedResource.create(Vocabulary.INDIVIDUAL_IRI_BASE + i));
         }
         return desc;
+    }
+
+    private static <T> ReferencedListValueDescriptor<T> createValueDescriptor(Assertion.AssertionType assertionType) {
+        final Assertion contentAssertion = assertionType == Assertion.AssertionType.OBJECT_PROPERTY ? Assertion.createObjectPropertyAssertion(
+                URI.create(ListHandlerTestHelper.NODE_CONTENT_PROPERTY), false) : Assertion.createDataPropertyAssertion(URI.create(ListHandlerTestHelper.NODE_CONTENT_PROPERTY), false);
+        return new ReferencedListValueDescriptor<>(OWNER,
+                Assertion.createObjectPropertyAssertion(URI.create(LIST_PROPERTY), false),
+                Assertion.createObjectPropertyAssertion(URI.create(NEXT_NODE_PROPERTY),
+                        false), contentAssertion);
     }
 
     @Test
@@ -294,7 +302,7 @@ public class ReferencedListHandlerTest {
                 connector.findStatements(owner, hasListProperty, null, descriptor.getListProperty().isInferred()))
                 .thenReturn(Collections.emptyList());
 
-        handler.updateList(descriptor);
+        sut.updateList(descriptor);
         verify(connector, never()).removeStatements(anyCollection());
         int i = 0;
         assertFalse(added.isEmpty());
@@ -321,7 +329,7 @@ public class ReferencedListHandlerTest {
             descriptor.addValue(r);
         }
 
-        handler.updateList(descriptor);
+        sut.updateList(descriptor);
         verify(connector, never()).removeStatements(anyCollection());
         verify(connector, atLeast(1)).addStatements(anyCollection());
         assertEquals(tempDesc.getValues().size() * 2, added.size());
@@ -335,13 +343,9 @@ public class ReferencedListHandlerTest {
 
     @Test
     void persistListSupportsSavingDataPropertyValuesAsListElements() throws Exception {
-        final ReferencedListValueDescriptor<Integer> desc = new ReferencedListValueDescriptor<>(OWNER,
-                Assertion.createObjectPropertyAssertion(URI.create(LIST_PROPERTY), false),
-                Assertion.createObjectPropertyAssertion(URI.create(NEXT_NODE_PROPERTY),
-                        false), Assertion.createDataPropertyAssertion(URI.create(ListHandlerTestHelper.NODE_CONTENT_PROPERTY), false));
+        final ReferencedListValueDescriptor<Integer> desc = createValueDescriptor(Assertion.AssertionType.DATA_PROPERTY);
         IntStream.range(0, 5).mapToObj(i -> Generator.randomInt()).forEach(desc::addValue);
 
-        final ReferencedListHandler sut = new ReferencedListHandler(connector, vf);
         sut.persistList(desc);
         final ArgumentCaptor<Collection> captor = ArgumentCaptor.forClass(Collection.class);
         verify(connector).addStatements(captor.capture());
@@ -369,11 +373,46 @@ public class ReferencedListHandlerTest {
         final List<Integer> refList = IntStream.range(0, 5).boxed().collect(Collectors.toList());
         final List<URI> listNodes = initListNodes(refList);
         initStatementsForList(listNodes, refList);
-        final Collection<Axiom<?>> res = handler.loadList(listDescriptor);
+        final Collection<Axiom<?>> res = sut.loadList(listDescriptor);
         assertEquals(refList.size(), res.size());
         for (Axiom<?> a : res) {
             assertInstanceOf(Integer.class, a.getValue().getValue());
             assertTrue(refList.contains((Integer) a.getValue().getValue()));
+        }
+    }
+
+    @Test
+    void persistListSavesMultilingualStringTranslationsAsContentOfSingleNode() throws Exception {
+        final List<MultilingualString> refList = List.of(
+                new MultilingualString(Map.of("en", "one", "cs", "jedna")),
+                new MultilingualString(Map.of("en", "two", "cs", "dva"))
+        );
+        final ReferencedListValueDescriptor<MultilingualString> desc = createValueDescriptor(Assertion.AssertionType.DATA_PROPERTY);
+        refList.forEach(desc::addValue);
+
+        sut.persistList(desc);
+        final ArgumentCaptor<Collection> captor = ArgumentCaptor.forClass(Collection.class);
+        verify(connector).addStatements(captor.capture());
+        final Collection<Statement> stmts = captor.getValue();
+        assertEquals(desc.getValues().size() * 3, stmts.size());
+        int i = 0;
+        for (Statement stmt : stmts) {
+            if (i == 0) {
+                assertEquals(hasListProperty, stmt.getPredicate());
+            } else if (i % 3 != 0) {
+                assertEquals(nodeContentProperty, stmt.getPredicate());
+                final Value nodeContent = stmt.getObject();
+                assertTrue(nodeContent.isLiteral());
+                final LangString nodeContentLit = (LangString) Rdf4jUtils.getLiteralValue((Literal) nodeContent);
+                assertTrue(nodeContentLit.getLanguage().isPresent());
+                final String lang = nodeContentLit.getLanguage().get();
+                final String value = nodeContentLit.getValue();
+                assertTrue(refList.stream().anyMatch(mls -> mls.getValue().containsKey(lang) && mls.getValue().get(lang)
+                                                                                                   .equals(value)));
+            } else {
+                assertEquals(nextNodeProperty, stmt.getPredicate());
+            }
+            i++;
         }
     }
 }
